--- a/stylesheet.css
+++ b/stylesheet.css
@@ -964,6 +964,14 @@ span.eye {
     margin-right: .8em;
 }
 
+button#save-this-list {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+    margin-top: 3em;
+    font-size: 1.4em;
+}
+
 
 
 
